fixed bookcard spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -109,6 +109,7 @@ button{
 #bookcase{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: left;
     align-items: center;
 }
@@ -130,7 +131,7 @@ label {margin: 0 5px 0 10px;}
     padding: 10px;
     border: 1px solid var(--color-contrast-dark);
     border-radius: 15px;
-    margin: 5px auto;
+    margin: 5px;
 }
 .read{
     background: var(--color-contrast-dark);
